--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.7"
+    "moment": "^2.24.0",
+    "mongoose": "^5.6.7",
+    "react-calendar": "^2.19.1"
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
